# terraform-ecs

./: .gitignore  Dockerfile  LICENSE  README.md
services/: pyproject.toml
services/web_app/: app.py  logging_utils.py  s3_utils.py  settings.py  uvicorn_serve.py
terraform/: .terraform.lock.hcl  cloudwatch.tf  ec2.tf  ecr.tf  ecs.tf  iam.tf  main.tf  networking.tf  s3.tf  setup-tf-ecr.sh  sg.tf  variable.tf
terraform/.terraform/: terraform.tfstate
terraform/scripts/: setup.sh
