[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Syed Tamzid <tamzid2004@gmail.com>"]
readme = "README.md"
packages = [{include = "web_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
boto3 = "^1.26.32"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
